css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap');
body{
   background-color: #FF7978;
   color: #F9FFFE;
   text-align: center;
   font-family: Lexend Deca;
   font-size: 16px;
}
h1{
   font-weight: 600;
   margin-top: .5em;
}
form{
   background-color: #f2ecec;
   padding: 1em;
   width: 100%;
   border-radius: 8px;
   margin: 0 auto;
}
input{
   width: 90%;
   margin: 1em auto;
   padding: 1em;
   border-radius: 6px;
   border: solid 0;
   border-color: #A3A3A3;
   text-transform: capitalize;
}
small{
   color:#53625a;
   width: 90%;
}
.btn{
   background-color:#37CC8A ;
   width: 95%;
   padding:1.5em 1em;
   text-align: center;
}
.formhead{
   background-color: #5D54A3;
   width: 100%;
   margin: auto auto .5em;
   padding: .5em 1em;
   border-radius: 8px;
}
.bb{
   color: #9EA5A1;
   font-weight: 500;
}
#container{
   margin: 4em auto 2em;
   display: flex;
   width: 80%;
}
.textarticle{
   width: 40%;
   padding: 2em;
}
.register{
   width: 40%;
   padding: 2em;
}
.terms{
   color: red;
   font-weight: 900;
}
@media(min-width: 1000px){
   body{
      background-image: url("../images/bg-intro-desktop.png")
   }
   #container{
      margin: auto;
      max-width: 1000px;
   }
   .textarticle{
      text-align: left;
      margin: auto;
   }
}
@media(max-width: 989px){
   body{
      background-image: url("../images/bg-intro-mobile.png");
      text-align: center;
      max-width: 100vw;
   }
   h1{
      font-weight: 400;
      margin-top: 0;
   }
   #container{
      flex-direction: column;
      padding: 0;
      margin: 0 auto;
      width: 100%;
   }
   .textarticle{
      width: 90%;
      padding: 1em 5%;
      margin: auto;
   }
   .register{
      margin: 0 auto;
      width: 90%;
      padding: 1em 5%;
   }
   form{
      padding: 1em;
      width: 100%;
      margin: 0 auto;
   }
   input{
      width: 80%;
      margin: 1em auto;
      padding: 1em;
      border-radius: 6px;
      border: solid 0;
      border-color: #A3A3A3;
   }
   .formhead{
      background-color: #5D54A3;
      width: 100%;
      margin: auto auto .5em;
      padding: .5em 1em;
      border-radius: 8px;
   }
}@media(min-width: 1440px){
   #container{
      margin:8em auto;
   }
}

